manifest/overlay/dev/app-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limit-app
  annotations:
    cert-manager.io/issuer: "letsencrypt-humanz"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.rate-limit.kano2525.dev
    secretName: dev-rate-limit-tls

  rules:
    - host: dev.rate-limit.kano2525.dev
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: rate-limit
                port:
                  number: 80
            path: /
